nav tab overfloww fix

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -143,13 +143,13 @@
     "delete_title": "Supprimer compte de {username}",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible.",
     "resources_of_title": "Ressources de {username}",
-    "resources_title": "Ressources",
-    "resources_likeby_title": "Ressources aimées",
-    "resources_sharedby_title": "Ressources partagées",
-    "resources_exploitedby_title": "Ressources exploitées",
-    "resources_sharedto_title": "Ressources partagées à",
-    "resources_savedby_title": "Ressources sauvegardées",
-    "resources_draftedby_title": "Ressources brouillonnées",
+    "resources_title": "Publiées",
+    "resources_likeby_title": "Aimées",
+    "resources_sharedby_title": "Partagées",
+    "resources_exploitedby_title": "Exploitées",
+    "resources_sharedto_title": "Partagées à",
+    "resources_savedby_title": "Sauvegardées",
+    "resources_draftedby_title": "Brouillonnées",
     "comments_of_title": "Commentaires de {username}"
   },
   "profiles": {
