--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -152,6 +152,12 @@
     "verify_email": "Vérifier email",
     "verify_email_description": "Un email de vérification sera envoyé à votre adresse email.",
     "verify_email_title": "Vérifier email de {username}",
+    "certify": "Certifier",
+    "certify_title": "Certifier {username}",
+    "certify_description": "Êtes-vous sûr de vouloir certifier cet utilisateur ?",
+    "uncertify": "Décertifier",
+    "uncertify_title": "Décertifier {username}",
+    "uncertify_description": "Êtes-vous sûr de vouloir décetifier cet utilisateur ?",
     "delete": "Supprimer compte",
     "delete_title": "Supprimer compte de {username}",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible.",
