--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -158,6 +158,9 @@
     "uncertify": "Décertifier",
     "uncertify_title": "Décertifier {username}",
     "uncertify_description": "Êtes-vous sûr de vouloir décetifier cet utilisateur ?",
+    "role": "Rôle",
+    "promote": "Promouvoir",
+    "promote_title": "Promouvoir {username}",
     "delete": "Supprimer compte",
     "delete_title": "Supprimer compte de {username}",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer ce compte ? Toutes les données associées seront perdues. Cette action est irréversible.",
