--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -214,6 +214,12 @@
     "edit_media_title": "Modifier le média de la ressource : {title}",
     "edit_shareto": "Modifier avec qui partager la ressource",
     "edit_shareto_title": "Modifier avec qui partager la ressource : {title}",
+    "verify": "Vérifier la ressource",
+    "verify_title": "Vérifier la ressource : {title}",
+    "verify_description": "Êtes-vous sûr de vouloir vérifier cette ressource ?",
+    "unverify": "Dévérifier la ressource",
+    "unverify_title": "Dévérifier la ressource : {title}",
+    "unverify_description": "Êtes-vous sûr de vouloir dévérifier cette ressource ?",
     "delete": "Supprimer la ressource",
     "delete_title": "Supprimer la ressource : {title}",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer cette ressource ? Toutes les données associées seront perdues. Cette action est irréversible.",
