--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -42,7 +42,8 @@
   },
   "home": {
     "page": "Accueil",
-    "title": "Bienvenue sur le site des Ressources (Re)lationnelles"
+    "title": "Accueil",
+    "description": "Le site des Ressources (Re)lationnelles permet de consulter, partager et créer des ressources afin de faciliter l'accès à l'information et de favoriser l'échange entre les personnes."
   },
   "about": {
     "page": "À propos",
