--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -42,8 +42,10 @@
   },
   "home": {
     "page": "Accueil",
-    "title": "Accueil",
-    "description": "Le site des Ressources (Re)lationnelles permet de consulter, partager et créer des ressources afin de faciliter l'accès à l'information et de favoriser l'échange entre les personnes."
+    "title": "Bienvenue sur le site des Ressources (Re)lationnelles",
+    "description": "Le site des Ressources (Re)lationnelles permet de consulter, partager et créer des ressources afin de faciliter l'accès à l'information et de favoriser l'échange entre les personnes.",
+    "resources": "Les resources les plus populaires, à découvrir !",
+    "profiles": "Les derniers membres inscrits, Bienvenue !"
   },
   "about": {
     "page": "À propos",
