--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -55,6 +55,10 @@
     "page": "Mentions légales & CGU",
     "title": "Mentions légales & CGU"
   },
+  "accessibility": {
+    "page": "Accessibilité",
+    "title": "Accessibilité"
+  },
   "not-found": {
     "page": "Page introuvable",
     "title": "Page introuvable",
