--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,16 +1,452 @@
 {
     "app": {
-        "name_short": "RR",
-        "name": "RESSOURCES RELATIONNELLES"
+        "name": "(Re)lational Resources",
+        "name_short": "R(RE)",
+        "no_results": "NO results",
+        "no_response": "There was no response from the server, please try again later.",
+        "loading": "Loading...",
+        "submit": "Submit",
+        "cancel": "Cancel",
+        "yes": "Yes",
+        "no": "No",
+        "asc": "Ascending",
+        "desc": "Descending",
+        "limits": {
+            "10": "10 per page",
+            "25": "25 per page",
+            "50": "50 per page",
+            "100": "100 per page"
+        },
+        "themes": {
+            "light": "Light",
+            "dark": "Dark"
+        },
+        "search": "Search",
+        "search_placeholder": "Search...",
+        "search_no_results": "No results found for '{query}'",
+        "search_results": "Search results for '{query}'",
+        "search_results_min_length": "Please enter at least {min} characters to search",
+        "total_results": "<b>{total}</b> results found",
+        "see_more": "See more",
+        "not_authorized": "You are not authorized to access this page",
+        "name_required": "Please enter a name"
     },
-    "login": {
-        "success": "You are now logged in"
+    "toast": {
+        "success": "Success",
+        "error": "Error",
+        "warning": "Warning",
+        "info": "Info"
+    },
+    "footer": {
+        "copyright": "© {year} Ressources (Re)lationnelles"
     },
     "home": {
         "page": "Home",
-        "title": "Welcome to my website"
+        "title": "Welcome to (Re)lational Resources",
+        "description": "The (Re)lational Resources website allows you to consult, share, and create resources in order to facilitate access to information and promote exchange between people.",
+        "resources": "The most popular resources to discover!",
+        "profiles": "The latest registered members, Welcome!"
     },
-    "footer": {
-        "copyright": "© {year} My Website"
+    "about": {
+        "page": "About",
+        "title": "About (Re)lational Resources"
+    },
+    "legal": {
+        "page": "Legal",
+        "title": "Legal"
+    },
+    "accessibility": {
+        "page": "Accessibility",
+        "title": "Accessibility"
+    },
+    "not-found": {
+        "page": "Page not found",
+        "title": "Page not found",
+        "description": "The page you are looking for does not exist."
+    },
+    "login": {
+        "page": "Login",
+        "title": "Login",
+        "remember_me": "Remember me",
+        "forgot_password": "Forgot your password ?",
+        "register": "Not registered yet ?",
+        "submit": "Login",
+        "success": "You are now logged in",
+        "error": "You are already logged in"
+    },
+    "register": {
+        "page": "Register",
+        "title": "Register",
+        "accept_terms": "I accept the terms of use",
+        "accept_terms_required": "You must accept the terms of use",
+        "submit": "Register",
+        "login": "Already registered ?"
+    },
+    "forgot-password": {
+        "page": "Forgot password",
+        "title": "Forgot password",
+        "login": "I remember my password",
+        "submit": "Send me a reset link"
+    },
+    "forgot-password-reset": {
+        "page": "Reset password",
+        "title": "Reset password",
+        "submit": "Reset my password"
+    },
+    "logout": {
+        "page": "Logout",
+        "title": "Logout",
+        "submit": "Logout",
+        "success": "You are now logged out",
+        "error": "You are already logged out"
+    },
+    "user": {
+        "username": "Username",
+        "username_placeholder": "Your username",
+        "username_required": "Please enter your username",
+        "email": "Email",
+        "email_placeholder": "Your email address",
+        "email_required": "Please enter your email address",
+        "email_invalid": "Please enter a valid email address",
+        "email_confirmation": "Email Confirmation",
+        "email_confirmation_placeholder": "Confirm your email address",
+        "email_confirmation_required": "Please confirm your email address",
+        "email_confirmation_invalid": "Email addresses do not match",
+        "first_name": "First Name",
+        "first_name_placeholder": "Your first name",
+        "last_name": "Last Name",
+        "last_name_placeholder": "Your last name",
+        "old_password": "Old Password",
+        "old_password_placeholder": "Your old password",
+        "password": "Password",
+        "password_placeholder": "Your password",
+        "password_required": "Please enter your password",
+        "password_length": "Your password must be at least 6 characters",
+        "password_confirmation": "Password Confirmation",
+        "password_confirmation_placeholder": "Confirm your password",
+        "password_confirmation_required": "Please confirm your password",
+        "password_confirmation_invalid": "Passwords do not match",
+        "not_found": "User not found",
+        "bio": "Biography",
+        "bio_placeholder": "Your biography",
+        "gender": "Gender",
+        "gender_placeholder_select": "Select a gender",
+        "genders": {
+            "M": "Male",
+            "F": "Female",
+            "O": "Other"
+        },
+        "birthDate": "Date of Birth",
+        "roles": {
+            "ROLE_USER": "User",
+            "ROLE_MODERATOR": "Moderator",
+            "ROLE_ADMIN": "Administrator",
+            "ROLE_SUPER_ADMIN": "Super Administrator"
+        },
+        "state": "State",
+        "state_placeholder_select": "Select a state",
+        "age": "Born on {birthDate} ({age} years old)",
+        "member_since": "Member since {createdAt} ({days} days)",
+        "certified": "Certified",
+        "verified": "Verified",
+        "unverified": "Unverified",
+        "photo": "Photo",
+        "photo_size": "Photo must be less than 5 MB",
+        "photo_invalid": "Photo must be in jpg, jpeg, gif, or png format"
+    },
+    "profile": {
+        "page": "Profile",
+        "title": "{username}'s Profile",
+        "actions": "Actions",
+        "edit": "Edit Profile",
+        "edit_title": "Edit {username}'s Profile",
+        "edit_photo": "Edit Profile Photo",
+        "edit_photo_title": "Edit {username}'s Profile Photo",
+        "edit_password": "Change Password",
+        "edit_password_title": "Change {username}'s Password",
+        "edit_email": "Change Email",
+        "edit_email_title": "Change {username}'s Email",
+        "verify_email": "Verify Email",
+        "verify_email_description": "A verification email will be sent to your email address.",
+        "verify_email_title": "Verify {username}'s Email",
+        "certify": "Certify",
+        "certify_title": "Certify {username}",
+        "certify_description": "Are you sure you want to certify this user?",
+        "uncertify": "Uncertify",
+        "uncertify_title": "Uncertify {username}",
+        "uncertify_description": "Are you sure you want to uncertify this user?",
+        "role": "Role",
+        "promote": "Promote",
+        "promote_title": "Promote {username}",
+        "ban": "Ban",
+        "ban_title": "Ban {username}",
+        "delete": "Delete Account",
+        "delete_title": "Delete {username}'s Account",
+        "delete_confirmation": "Are you sure you want to delete this account? All associated data will be lost. This action is irreversible.",
+        "resources_of_title": "{username}'s Resources",
+        "resources_title": "Published",
+        "resources_likeby_title": "Liked",
+        "resources_sharedby_title": "Shared",
+        "resources_exploitedby_title": "Exploited",
+        "resources_sharedto_title": "Shared To",
+        "resources_savedby_title": "Saved",
+        "resources_draftedby_title": "Drafted",
+        "comments_of_title": "{username}'s Comments"
+    },
+    "profiles": {
+        "page": "Profiles",
+        "title": "Profiles",
+        "see_profile": "See Profile",
+        "load_more": "Load More Profiles",
+        "meta": "Showing <b>{end}</b> profiles in <b>{total}</b> profiles",
+        "search": "Search profiles",
+        "search_placeholder": "Search by username, first name, or last name",
+        "certified": "Profiles certifications",
+        "certified_placeholder_select": "All certifications",
+        "roles": "Profiles roles",
+        "roles_placeholder_select": "All roles",
+        "states": "Profiles states",
+        "states_placeholder_select": "All states",
+        "genders": "Profiles gender",
+        "genders_placeholder_select": "All genders",
+        "order": "Profiles order",
+        "orders": {
+            "createdAt": "Creation date",
+            "username": "Username",
+            "firstName": "First name",
+            "lastName": "Last name"
+        },
+        "direction": "Profiles direction",
+        "limit": "Number of profiles per page",
+        "filter": "Filter profiles",
+        "no_results": "No profiles found"
+    },
+    "profile-verify": {
+        "page": "Profile Verification"
+    },
+    "resource": {
+        "page": "Resource",
+        "title": "Resource: {title}",
+        "actions": "Actions",
+        "edit": "Edit resource",
+        "edit_title": "Edit resource: {title}",
+        "edit_media": "Edit resource media",
+        "edit_media_title": "Edit resource media: {title}",
+        "edit_shareto": "Edit who to share resource with",
+        "edit_shareto_title": "Edit who to share resource with: {title}",
+        "verify": "Verify resource",
+        "verify_title": "Verify resource: {title}",
+        "verify_description": "Are you sure you want to verify this resource?",
+        "unverify": "Unverify resource",
+        "unverify_title": "Unverify resource: {title}",
+        "unverify_description": "Are you sure you want to unverify this resource?",
+        "delete": "Delete resource",
+        "delete_title": "Delete resource: {title}",
+        "delete_confirmation": "Are you sure you want to delete this resource? All associated data will be lost. This action is irreversible.",
+        "media": "Media",
+        "media_size": "Media must be less than 10MB",
+        "media_invalid": "Media must be in mp4, jpg, jpeg, gif, or png format",
+        "title_field": "Title",
+        "title_field_placeholder": "Resource title",
+        "title_field_required": "Please enter a title",
+        "content": "Content",
+        "content_placeholder": "Resource content",
+        "content_required": "Please enter content",
+        "link": "Link",
+        "link_placeholder": "Resource link (https://...)",
+        "link_invalid": "Link is not valid, it must start with https://",
+        "is_published": "Published",
+        "sharetousers": "Share with users",
+        "sharetousers_placeholder_select": "Select users",
+        "relation": "Relation",
+        "relation_placeholder_select": "Select a relation",
+        "relation_required": "Please select a relation",
+        "categories": "Resource categories",
+        "categories_placeholder_select": "Select categories",
+        "verified": "Verified",
+        "unverified": "Unverified",
+        "create": "Create",
+        "draft": "Draft",
+        "stats_title": "Statistics",
+        "stats": {
+            "likes": "Likes",
+            "comments": "Comments",
+            "shares": "Shares",
+            "exploits": "Exploits",
+            "consults": "Consultations",
+            "saves": "Saves"
+        },
+        "likes_title": "Resource {title} liked by",
+        "shares_title": "Resource {title} shared by",
+        "exploits_title": "Resource {title} exploited by",
+        "consults_title": "Resource {title} consulted by",
+        "likes_load_more": "Load more",
+        "not_found": "Resource not found",
+        "comments": "Comments"
+    },
+    "resources": {
+        "page": "Resources",
+        "title": "Resources",
+        "see_resource": "View resource",
+        "load_more": "Load more resources",
+        "meta": "Showing <b>{end}</b> resources in <b>{total}</b> resources",
+        "search": "Search for a resource",
+        "search_placeholder": "Search by title, description, or tags",
+        "verified": "Resource verification",
+        "verified_placeholder_select": "All verification statuses",
+        "order": "Resource display order",
+        "orders": {
+            "createdAt": "Creation date",
+            "title": "Title",
+            "likes": "Number of likes",
+            "comments": "Number of comments",
+            "shares": "Number of shares",
+            "exploits": "Number of exploits",
+            "saves": "Number of saves",
+            "consults": "Number of views"
+        },
+        "direction": "Resource display direction",
+        "limit": "Number of resources per page",
+        "filter": "Filter resources",
+        "no_results": "No resources found",
+        "published_days_ago": "Published {days} days ago",
+        "visibility": "Visibility",
+        "visibility_placeholder_select": "All visibilities",
+        "visibilities": {
+            "1": "Public",
+            "2": "Protected",
+            "3": "Private"
+        },
+        "verifies": {
+            "0": "Not verified",
+            "1": "Verified"
+        },
+        "authors": "Resource authors",
+        "authors_placeholder_select": "All authors",
+        "relations": "Resource relations",
+        "relations_placeholder_select": "All relations",
+        "categories": "Resource categories",
+        "categories_placeholder_select": "All categories",
+        "create": "Create a resource",
+        "load_more_likes": "See more"
+    },
+    "comments": {
+        "page": "Comments",
+        "title": "Comments",
+        "see_comment": "View comment",
+        "load_more": "Load more comments",
+        "meta": "Showing <b>{end}</b> out of <b>{total}</b> comments",
+        "search": "Search for a comment",
+        "search_placeholder": "Search by content",
+        "order": "Order of comments",
+        "orders": {
+            "createdAt": "Creation date",
+            "content": "Content"
+        },
+        "direction": "Comment display direction",
+        "limit": "Number of comments per page",
+        "filter": "Filter comments",
+        "no_results": "No comments were found",
+        "authors": "Comment authors",
+        "authors_placeholder_select": "All authors",
+        "resources": "Comment resources",
+        "resources_placeholder_select": "All resources"
+    },
+    "comment": {
+        "page": "Comment",
+        "title": "Comment: {content}",
+        "actions": "Actions",
+        "edit": "Edit comment",
+        "edit_title": "Edit comment: {content}",
+        "delete": "Delete comment",
+        "delete_title": "Delete comment: {content}",
+        "delete_confirmation": "Are you sure you want to delete this comment? All associated data will be lost. This action is irreversible.",
+        "content": "Content",
+        "content_placeholder": "Comment content",
+        "content_required": "Please enter content",
+        "create": "Add a comment",
+        "anonymous": "Anonymous",
+        "replies": "{count} replies",
+        "reply": "Reply",
+        "reply_title": "Reply to comment: {content}",
+        "replies_load": "View replies",
+        "replies_load_more": "Load more replies",
+        "not_found": "Comment not found"
+    },
+    "admin": {
+        "page": "Administration Space",
+        "title": "Administration Space",
+        "profiles_title": "Profiles",
+        "resources_title": "Resources",
+        "comments_title": "Comments",
+        "categories_title": "Categories",
+        "relations_title": "Relations",
+        "bans_title": "Bans"
+    },
+    "categories": {
+        "meta": "Showing <b>{end}</b> categories out of <b>{total}</b> categories",
+        "load_more": "Load More Categories",
+        "name": "Name",
+        "createdAt": "Created At",
+        "updatedAt": "Updated At",
+        "actions": "Actions",
+        "create": "Create a Category"
+    },
+    "category": {
+        "name_field": "Name",
+        "name_field_placeholder": "Category Name",
+        "create": "Create",
+        "edit": "Edit",
+        "edit_title": "Edit Category: {name}",
+        "delete": "Delete",
+        "delete_title": "Delete Category: {name}",
+        "delete_confirmation": "Are you sure you want to delete this category? All associated data will be lost. This action is irreversible."
+    },
+    "relations": {
+        "meta": "Showing <b>{end}</b> relations out of <b>{total}</b> relations",
+        "load_more": "Load More Relations",
+        "name": "Name",
+        "createdAt": "Created At",
+        "updatedAt": "Updated At",
+        "actions": "Actions",
+        "create": "Create a Relation"
+    },
+    "relation": {
+        "name_field": "Name",
+        "name_field_placeholder": "Relation Name",
+        "create": "Create",
+        "edit": "Edit",
+        "edit_title": "Edit Relation: {name}",
+        "delete": "Delete",
+        "delete_title": "Delete Relation: {name}",
+        "delete_confirmation": "Are you sure you want to delete this relation? All associated data will be lost. This action is irreversible."
+    },
+    "bans": {
+        "meta": "Showing <b>{end}</b> bans out of <b>{total}</b> bans",
+        "load_more": "Load more bans",
+        "user": "User",
+        "author": "Author",
+        "reason": "Reason",
+        "endDate": "End date",
+        "createdAt": "Creation date",
+        "updatedAt": "Modification date",
+        "actions": "Actions",
+        "perma": "Permanent",
+        "create": "Ban someone"
+    },
+    "ban": {
+        "create": "Create",
+        "edit": "Edit",
+        "edit_title": "Edit ban : {reason}",
+        "delete": "Delete",
+        "delete_title": "Delete ban : {reason}",
+        "delete_confirmation": "Are you sure you want to delete this ban ? All associated data will be lost. This action is irreversible.",
+        "user": "User",
+        "user_placeholder_select": "Select a user",
+        "user_required": "Please select a user",
+        "reason": "Reason",
+        "reason_field_placeholder": "Reason of the ban",
+        "reason_required": "Please enter a reason",
+        "endDate": "End date"
     }
 }
